# my_gps_project

./: .gitignore  README.md  tf.rviz
data/preprocessed/: 이전대회 GPS 데이터 (평행주차).txt  이전대회 GPS 데이터.txt
data/processed/: 100_bag.csv  300_bag.csv  300_bag_15hz.csv  300_bag_8hz.csv  70_bag.csv  70_bag_8hz.csv  90_bag_15hz.csv  csv_to_png.py  txt_to_csv_2d.py
outputs/csv/: f9p_fix.csv  f9r_fix.csv  imu_meas.csv  ublox_gps_node_fix_velocity.csv
scripts/: bag_to_csv.py  plot_path.py  plot_rpy_and_path.py
src/: local_cartesian_path_publisher.cpp.txt  roi_path_publisher.cpp.txt
src/RTK_GPS_NTRIP/ntrip_client/launch/: ntrip_client_launch.py
src/RTK_GPS_NTRIP/ublox_gps/config/: zed_f9p.yaml  zed_f9r.yaml
src/RTK_GPS_NTRIP/ublox_gps/launch/: ublox_f9p_launch.py  ublox_f9r_launch.py
src/cal_azimuth_angle/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/cal_azimuth_angle/cal_azimuth_angle/: azimuth_angle_calculator.cpp  gps_yaw_calculator.py.txt
src/csv_viewer/: package.xml  setup.cfg  setup.py
src/csv_viewer/csv_viewer/: csv_rviz_viewer.py
src/csv_viewer/docs/: howto.md
src/csv_viewer/launch/: csv_rviz_viewer.launch.py
src/csv_viewer/rviz/: view_csv.rviz
src/gps_to_utm/: CMakeLists.txt  package.xml
src/gps_to_utm/src/: f9r_to_csv.py  tf_gps_csv.cpp  tf_gps_csv.cpp.txt
src/mandol_tf_bringup/: package.xml  setup.cfg  setup.py
src/mandol_tf_bringup/mandol_tf_bringup/: azimuth_indep.py  azimuth_pub.py  tf_pub.py
src/path_planning/: CMakeLists.txt  package.xml
src/path_planning/src/: f9r_roi_path.cpp  gpu_roi.cu
