<?xml version="1.0"?>
<package format="3">
  <name>mandol_tf_bringup</name>
  <version>0.0.1</version>
  <description>TF setup for F9R/F9P and CSV alignment</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- ★ 요게 없어서 ament_cmake로 착각한 거야 -->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
